--- a/src/styles/components/_title.scss
+++ b/src/styles/components/_title.scss
@@ -35,11 +35,12 @@
       height: 35px;
       color: $color-text-primary;
       margin-top: 5px;
+      display: none;
     }
 
     span {
       float: right;
-      margin: 8px 0 0 10px;
+      margin: 8px 0 0 0;
       color: $color-text-secondary;
 
       @include media-lg {
